# gen-thrungkru-flashsale

./: .env.example  .gitignore  .mcp.json  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  sprintplan.md  start.sh  tailwind.config.ts  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/admin/: layout.tsx  page.tsx
app/crowd/: page.tsx
app/feed/: page.tsx
app/flash-sales/: page.tsx
app/login/: page.tsx
app/map/: page.tsx
app/notifications/: page.tsx
app/register/: page.tsx
app/shops/: page.tsx
components/: icons.tsx  search-bar.tsx
components/admin/: vendor-actions.tsx
components/auth/: login-form.tsx  register-form.tsx  user-menu.tsx
components/crowd/: busy-badge.tsx  crowd-heatmap.tsx  crowd-line-chart.tsx
components/flash-sale/: countdown.tsx  flash-sale-card.tsx  wizard.tsx
components/layout/: bottom-nav.tsx  site-header.tsx
components/map/: mapbox-map-lazy.tsx  mapbox-map.tsx  market-map-switcher.tsx  market-map.tsx
components/pwa/: push-registrar.tsx
forecast-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
forecast-service/app/: config.py  db.py  features.py  model.py  server.py  synthetic.py
lib/: categories.ts  env.ts  geo.ts  images.ts  mock-data.ts  prisma.ts  types.ts  utils.ts
prisma/: schema.prisma  seed.ts
public/: manifest.webmanifest  sw.js
scripts/: predev.mjs
(+37 files in other folders)
