[project]
name = "thungkhru61-forecast"
version = "0.1.0"
description = "Crowd forecasting service for ตลาดทุ่งครุ 61"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pandas>=2.2",
  "numpy>=2.0",
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "prophet>=1.1.5",
  "holidays>=0.58",
  "optuna>=3.6",
  "redis>=5.0",
  "httpx>=0.27",
  "apscheduler>=3.10",
  "python-dotenv>=1.0",
  "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]
